--- a/_includes/meet_the_team.html
+++ b/_includes/meet_the_team.html
@@ -1,44 +1,42 @@
-<section class="about-section container-fluid">
-  <div class="about-subheading-wrapper">
-    <div class="about-subheading">
-      <h2> Meet the team </h2>
-    </div>
+<section class="page-block">
+  <div class="page-block-hdr-1">
+    <h2>Meet the team</h2>
   </div>
 
-  <div class="employees">
-
-    {% for emp in site.employees %}
-      {% if emp.active %}
-        <div class="employee">
-          <div class="employee-card">
-            <img class="employee-img" src="{{emp.image_path}}" alt="{{emp.image_description}}">
-            <div class="employee-profile">
-              <h3 class="employee-name">{{emp.full_name}}</h3>
-              <h4 class="employee-position">{{emp.position}}</h4>
-              <p class="employee-bio">{{emp.bio}}</p>
-            </div>
-            <div class="employee-links">
-                <span class="employee-socials">
-                  {% for social in emp.socials %}
-                    <a href="{{social.link}}" target="_blank" data-toggle="tooltip" data-placement="top" data-animation="false" title="{{social.link_description}}">
-                      <i class="fa fa-{{social.fa_icon_name}}" aria-hidden="true" title="{{social.name}}"></i>
-                      <span class="sr-only">{{social.link_description}}</span>
-                    </a>
-                  {% endfor %}
-                </span>
-                <span class="employee-contributions">
-                  {% for contr in emp.contributions %}
-                    <a href="{{contr.link}}" target="_blank" data-toggle="tooltip" data-placement="top" data-animation="false" title="{{contr.link_description}}">
-                      <i class="fa fa-{{contr.fa_icon_name}}" aria-hidden="true" title="{{contr.name}}"></i>
-                      <span class="sr-only">{{contr.link_description}}</span>
-                    </a>
-                  {% endfor %}
-                </span>
+  <div class="container-fluid">
+    <div class="employees">
+      {% for emp in site.employees %}
+        {% if emp.active %}
+          <div class="employee">
+            <div class="employee-card">
+              <img class="employee-img" src="{{emp.img_path}}" alt="{{emp.img_description}}">
+              <div class="employee-block">
+                <h3 class="employee-title">{{emp.full_name}}</h3>
+                <h4 class="employee-subtitle">{{emp.position}}</h4>
+                <p class="employee-text">{{emp.bio}}</p>
+              </div>
+              <div class="employee-footer">
+                  <span class="employee-socials">
+                    {% for social in emp.socials %}
+                      <a href="{{social.link}}" target="_blank" data-toggle="tooltip" data-placement="top" data-animation="false" title="{{social.link_description}}">
+                        <i class="fa fa-{{social.fa_icon_name}}" aria-hidden="true" title="{{social.name}}"></i>
+                        <span class="sr-only">{{social.link_description}}</span>
+                      </a>
+                    {% endfor %}
+                  </span>
+                  <span class="employee-contributions">
+                    {% for contr in emp.contributions %}
+                      <a href="{{contr.link}}" target="_blank" data-toggle="tooltip" data-placement="top" data-animation="false" title="{{contr.link_description}}">
+                        <i class="fa fa-{{contr.fa_icon_name}}" aria-hidden="true" title="{{contr.name}}"></i>
+                        <span class="sr-only">{{contr.link_description}}</span>
+                      </a>
+                    {% endfor %}
+                  </span>
+              </div>
             </div>
           </div>
-        </div>
-      {% endif %}
-    {% endfor %}
-
+        {% endif %}
+      {% endfor %}
+    </div>
   </div>
 </section>
