--- a/_sass/pages/_page.scss
+++ b/_sass/pages/_page.scss
@@ -13,7 +13,13 @@
   }
 }
 
-.page-hdr {
+.page-hdr-1 {
+  @extend .container;
+  @extend .mb-5;
+  @extend .mb-md-5;
+}
+
+.page-hdr-2 {
   @extend .container;
   @extend .mb-5;
   @extend .mb-md-6;
@@ -91,26 +97,5 @@
     @extend .img-fluid;
     height: auto;
     width: 100%;
-  }
-}
-
-.narrative {
-  @extend .col-11;
-  @extend .col-md-8;
-  @extend .mx-auto;
-  @extend .text;
-
-  p {
-    @extend .text-left;
-
-    &:last-child {
-      @extend .mb-0;
-    }
-  }
-
-  img {
-    @extend .img-fluid;
-    @extend .mt-3;
-    @extend .mb-4;
   }
 }
