--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -105,8 +105,10 @@
   @extend .d-flex;
   @extend .flex-column;
   @extend .justify-content-between;
-  @extend .mb-4;
-  @extend .mb-sm-0;
+  
+  &:first-child {
+    @extend .mb-4;
+  }
 
   .industry-info-item:not(:last-child) {
     @extend .mb-4;
