--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -7,12 +7,12 @@
 <section class="{{ header_css_class }}">
 
   {% if page.header_title %}
-    {% assign title = page.header_title %}
+    {% assign header_title = page.header_title %}
   {% else %}
-    {% assign title = page.title %}
+    {% assign header_title = page.title %}
   {% endif %}
 
-  <h1>{{ page.title }}</h1>
+  <h1>{{ header_title }}</h1>
 
   {% if page.header_content_css_class != nil and page.header_content != nil %}
     <div class="row">
