--- a/_sass/pages/_policies.scss
+++ b/_sass/pages/_policies.scss
@@ -3,16 +3,6 @@
 }
 
 .policy-list {
-  @extend .col-11;
-  @extend .col-sm-12;
-  @extend .col-md-10;
-  @extend .col-lg-8;
-  @extend .mx-auto;
-  @extend .text-left;
-  @extend .text;
+  @extend .text-lead;
   @extend %list-inside;
-
-  p {
-    @extend .mb-5;
-  }
 }
