alliances contact form...validation and submission remaining

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -141,6 +141,9 @@ $list-inline-padding: 0;
 // Navbar
 $navbar-padding-x: 0;
 
+// Forms
+$input-color-placeholder: $gray-lighter;
+
 // Buttons
 $btn-primary-color: $white;
 $btn-primary-bg: $brand-primary;
