--- a/_sass/pages/_common.scss
+++ b/_sass/pages/_common.scss
@@ -99,3 +99,64 @@
     width: 100%;
   }
 }
+
+.text {
+  a {
+    color: $text-link-color;
+    border-bottom: 1px dotted $text-link-decoration-color;
+
+    &:hover,
+    &:focus {
+      color: $text-link-hover-color;
+      border-bottom: 1px solid $text-link-decoration-hover-color;
+    }
+  }
+}
+
+.narrative {
+  @extend .col-11;
+  @extend .col-sm-10;
+  @extend .col-md-9;
+  @extend .col-lg-8;
+  @extend .mx-auto;
+  @extend .text;
+  @extend %list-base;
+
+  h2, p, ul {
+    @extend .text-left;
+  }
+
+  h2 {
+    font-size: $font-size-h2-sm;
+    color: $brand-primary;
+
+    &:not(:first-child) {
+      @extend .mt-5;
+    }
+
+    &:not(:last-child) {
+      @extend .mb-3;
+    }
+  }
+
+  p {
+    &:last-child {
+      @extend .mb-0;
+    }
+  }
+
+  img {
+    @extend .img-fluid;
+    @extend .mt-3;
+    @extend .mb-4;
+  }
+}
+
+.text-lead {
+  @extend %text-lead-col-base;
+  @extend .mb-5;
+
+  p {
+    @extend .mb-0;
+  }
+}
