--- a/_sass/pages/_manifest.scss
+++ b/_sass/pages/_manifest.scss
@@ -1,8 +1,8 @@
+@import "common";
 @import "header";
 @import "page_cta";
 @import "footer";
 @import "landing";
-@import "page";
 @import "about";
 @import "services";
 @import "service_area";
