--- a/css/main.scss
+++ b/css/main.scss
@@ -9,4 +9,5 @@
 @import "mixins";
 @import "utilities";
 @import "responsive_typography";
-@import "pages/pages_manifest";
+@import "forms";
+@import "pages/manifest";
