--- a/_sass/pages/_page_cta.scss
+++ b/_sass/pages/_page_cta.scss
@@ -73,13 +73,13 @@
   font-weight: 400;
   line-height: 1.25;
 
-  &:before {
+  &::before {
     content: "“";
     opacity: .5;
     font-size: inherit;
   }
 
-  &:after {
+  &::after {
     content: "”";
     opacity: .5;
     font-size: inherit;
@@ -106,6 +106,6 @@
   display: block;
 }
 
-.testimonial-author:before {
+.testimonial-author::before {
   content: "— ";
 }
