basic html5 form validation for alliances contact form

--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -10,4 +10,11 @@ form {
     color: $brand-primary;
     @extend .font-weight-bold;
   }
+
+  button[type="submit"] {
+    &:hover,
+    &:focus {
+      cursor: pointer;
+    }
+  }
 }
