--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,6 @@
   <script src="/js/script.js"></script>
 
   <!--[if lt IE 9]>
-    <script src="/js/html5shiv.js"></script>
+    <script src="/js/html5shiv.min.js"></script>
   <![endif]-->
 </head>
