--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -1,5 +1,5 @@
 {% if page.header_css_class == nil %}
-  {% assign header_css_class = "page-hdr-2" %}
+  {% assign header_css_class = 'page-hdr-2' %}
 {% else %}
   {% assign header_css_class = page.header_css_class %}
 {% endif %}
