--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -50,10 +50,6 @@
     @extend .mb-md-7;
   }
 
-  .row:not(:last-child) {
-    @extend .mb-5;
-  }
-
   h2 {
     @extend .mb-0;
   }
@@ -73,6 +69,10 @@
   @extend .row;
 }
 
+.lp-body-hdr-wrapper {
+  @extend .mb-5;
+}
+
 .lp-body-hdr,
 .lp-body-cta {
   @extend .col;
@@ -90,6 +90,10 @@
   @extend .col-lg-8;
   @extend .mx-auto;
   @extend .text;
+}
+
+.lp-body-cta-wrapper {
+  @extend .mt-4;
 }
 
 .lp-body-cta-btn {
