70% progress on join page

--- a/_includes/carry_culture_cta.html
+++ b/_includes/carry_culture_cta.html
@@ -4,7 +4,7 @@
 
     <div class="page-cta-hdr-wrapper ">
       <div class="page-cta-hdr">
-        <h3>Become a culture carrier.</h3>
+        <h3 class="header-display-3">Become a culture carrier.</h3>
       </div>
     </div>
 
