--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header>
+<header role="banner">
   <nav>
     <div class="navbar-brand-toggler-wrapper">
       <a class="navbar-brand" href="/"></a>
