--- a/_includes/intro_cta.html
+++ b/_includes/intro_cta.html
@@ -4,24 +4,24 @@
 
     <div class="page-cta-hdr-wrapper ">
       <div class="page-cta-hdr">
-        <h3 class="header-display-3">Let's get to work.</h3>
+        <h3 class="header-display-3">Introduce yourself.</h3>
       </div>
     </div>
 
     <div class="page-cta-content-wrapper">
-      <div class="page-cta-content-narrow">
+      <div class="page-cta-content">
         <p>
-          Have a bold idea or unsolvable problem?
-          We’d love to hear about it.
+          Interested in Skylight, but not ready to apply?
+          Get on our radar by dropping us an email.
         </p>
       </div>
     </div>
 
     <div class="page-cta-btn-wrapper">
       <div class="page-cta-btn">
-        <a href="/hire-us/" role="button">
-          <span>Contact Us</span>
-          <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+        <a href="mailto:hello@skylight.digital" role="button">
+          <span>Email us</span>
+          <i class="fa fa-at" aria-hidden="true"></i>
         </a>
       </div>
     </div>
