--- a/_includes/meet_the_team.html
+++ b/_includes/meet_the_team.html
@@ -1,4 +1,4 @@
-<section class="page-block">
+<section id="meet-the-team" class="page-block">
   <div class="page-block-hdr-1">
     <h2>Meet the team</h2>
   </div>
