--- a/_sass/pages/_common.scss
+++ b/_sass/pages/_common.scss
@@ -127,7 +127,7 @@
   }
 
   h2 {
-    font-size: $font-size-h2-sm;
+    font-size: $font-size-xxl;
     color: $brand-primary;
 
     &:not(:first-child) {
