--- a/css/main.scss
+++ b/css/main.scss
@@ -8,7 +8,7 @@
 @import "bootstrap/bootstrap";
 @import "mixins";
 @import "utilities";
-@import "responsive_typography";
+@import "type";
 @import "forms";
 @import "layout/manifest";
 @import "pages/manifest";
