several style improvements

--- a/_includes/hire_us_cta.html
+++ b/_includes/hire_us_cta.html
@@ -21,7 +21,7 @@
       <div class="page-cta-btn">
         <a href="/hire-us/" role="button">
           <span>Contact Us</span>
-          <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+          <i class="fa fa-arrow-right" aria-hidden="true"></i>
         </a>
       </div>
     </div>
