--- a/css/main.scss
+++ b/css/main.scss
@@ -8,6 +8,7 @@
 @import "bootstrap/bootstrap";
 @import "mixins";
 @import "utilities";
+@import "spacing";
 @import "type";
 @import "forms";
 @import "layout/manifest";
