--- a/_includes/join_us_cta.html
+++ b/_includes/join_us_cta.html
@@ -21,7 +21,7 @@
       <div class="page-cta-btn">
         <a href="/join/" role="button">
           <span>Join Us</span>
-          <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+          <i class="fa fa-arrow-right" aria-hidden="true"></i>
         </a>
       </div>
     </div>
