--- a/_sass/layout/_cta.scss
+++ b/_sass/layout/_cta.scss
@@ -26,6 +26,7 @@
   @extend .col;
   @extend .mx-auto;
   line-height: 1.75;
+  font-weight: 100;
 }
 
 .page-cta-content {
@@ -48,7 +49,7 @@
   @extend .col;
 
   a {
-    @extend %button-primary;
+    @extend %btn-page-cta;
   }
 }
 
@@ -70,7 +71,6 @@
 .testimonial-quote {
   font-size: $font-size-xl;
   @extend .font-italic;
-  font-weight: 400;
   line-height: 1.25;
 
   &::before {
@@ -94,6 +94,7 @@
   font-size: $font-size-sm;
   line-height: 1.5;
   font-style: normal;
+  font-weight: 100;
 
   @include media-breakpoint-up(md) {
     font-size: $font-size-lg;
