--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -18,10 +18,7 @@ header nav {
     @extend .nav-link;
     @extend %nav-link-decoration;
     @extend .px-3;
-
-    @include media-breakpoint-down(md) {
-      @include px-2;
-    }
+    @extend .px-md-down-2;
 
     &:last-child {
       @extend .pr-0;
