--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -6,18 +6,19 @@
   @extend .jumbotron;
   @extend .jumbotron-fluid;
   @extend .mb-0;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
+  background-image: linear-gradient(rgba(0,0,5,0.75), rgba(0,0,5,0.75)),
     url("../img/buzzword-stickies.jpg");
   background-size: cover;
 }
 
 .lp-headline-content {
   @extend .container;
+  @extend .mt-md-4;
+  @extend .mb-md-7;
+  @extend .py-4;
+  @extend .py-md-5;
   color: $jumbotron-color;
-
-  h1 {
-    @extend .mt-md-6;
-  }
+  background: radial-gradient(rgba(0,0,5,0.5) 40%, rgba(0,0,5,0) 70%);
 
   .lead {
     @extend .mt-4;
@@ -26,13 +27,11 @@
       font-size: $font-size-base;
     }
   }
-}
 
-.lp-headline-cta-btn {
-  @extend %button-primary;
-  @extend .mt-4;
-  @extend .mb-sm-3;
-  @extend .mb-md-10;
+  a {
+    @extend %btn-cta-primary;
+    @extend .mt-4;
+  }
 }
 
 .lp-body {
@@ -99,5 +98,5 @@
 }
 
 .lp-body-cta-btn {
-  @extend %button-secondary;
+  @extend %btn-cta-secondary;
 }
